[gd_scene load_steps=26 format=3 uid="uid://cc7jg0g3hp32o"]

[ext_resource type="Script" path="res://Scenes/enemy/enemy.gd" id="1_fcoee"]
[ext_resource type="Texture2D" uid="uid://cu6wvkikxhs3q" path="res://Assets/sprites/enemy1/Idle.png" id="1_u8w4a"]
[ext_resource type="Texture2D" uid="uid://bfelu1q53coas" path="res://Assets/sprites/enemy1/Walk.png" id="2_0jtmn"]
[ext_resource type="Texture2D" uid="uid://wulbswc7g7kp" path="res://Assets/sprites/enemy1/Attack1.png" id="2_nnm2l"]
[ext_resource type="PackedScene" uid="uid://cd5s56in141hr" path="res://Scenes/objects/healthbar.tscn" id="4_mqrjd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bnnjt"]
atlas = ExtResource("2_nnm2l")
region = Rect2(0, 0, 61, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q4ft"]
atlas = ExtResource("2_nnm2l")
region = Rect2(100, 0, 61, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kq0s"]
atlas = ExtResource("2_nnm2l")
region = Rect2(193, 0, 61, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjk5b"]
atlas = ExtResource("2_nnm2l")
region = Rect2(291, 0, 61, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_he0ml"]
atlas = ExtResource("2_nnm2l")
region = Rect2(385, 0, 61, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i5pd"]
atlas = ExtResource("2_nnm2l")
region = Rect2(480, 0, 61, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_81ahv"]
atlas = ExtResource("1_u8w4a")
region = Rect2(0, 0, 57, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b4ah"]
atlas = ExtResource("1_u8w4a")
region = Rect2(96, 0, 57, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0jn8"]
atlas = ExtResource("1_u8w4a")
region = Rect2(192, 0, 57, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayb6v"]
atlas = ExtResource("1_u8w4a")
region = Rect2(288, 0, 57, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwmj1"]
atlas = ExtResource("2_0jtmn")
region = Rect2(0, 0, 58, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bppev"]
atlas = ExtResource("2_0jtmn")
region = Rect2(97, 0, 56, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylwsh"]
atlas = ExtResource("2_0jtmn")
region = Rect2(190, 0, 57, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_afror"]
atlas = ExtResource("2_0jtmn")
region = Rect2(290, 0, 53, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwaie"]
atlas = ExtResource("2_0jtmn")
region = Rect2(389, 0, 46, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xsta"]
atlas = ExtResource("2_0jtmn")
region = Rect2(490, 0, 34, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_qog27"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnnjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q4ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kq0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjk5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he0ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i5pd")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81ahv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b4ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0jn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayb6v")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwmj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bppev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylwsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afror")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwaie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xsta")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bi65l"]
radius = 11.0
height = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d8cei"]
radius = 80.0062

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tseqf"]
radius = 9.0
height = 44.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 9
collision_mask = 11
script = ExtResource("1_fcoee")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(6, -30.8)
scale = Vector2(0.771429, 0.816667)
sprite_frames = SubResource("SpriteFrames_qog27")
animation = &"Attack"
frame = 1
frame_progress = 0.826467

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, -12)
shape = SubResource("CapsuleShape2D_bi65l")

[node name="detectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_d8cei")

[node name="Enemy_hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_hitbox"]
light_mask = 9
visibility_layer = 11
position = Vector2(6, -13)
shape = SubResource("CapsuleShape2D_tseqf")

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="Healthbar" parent="." instance=ExtResource("4_mqrjd")]
offset_left = -1.0
offset_top = -39.0
offset_right = 18.0
offset_bottom = -34.0

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="body_entered" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
